Final Deliverables/kubernetes/namespace-app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nutri
  labels:
    name: nutri
