Final Deliverables/kubernetes/auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deploy
  namespace: nutri
  labels:
    app: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth
        image: adhwaith2chandran/auth
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  namespace: nutri
  name: auth-service
spec:
  selector:
    app: auth
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
